syntax = "proto3";

package ModalStrike.Protobuf2;

message RpcRequest {
  string id = 1;
  string serviceName = 2;
  string methodName = 3;
  repeated BinaryValue params = 4;
}
message ResponseMessage {
  RpcResponse rpcResponse = 1;
  EventResponse eventResponse = 2;
}
message RpcResponse {
  string id = 1;
  Exception exception = 2;
  BinaryValue return = 3;
}
message Exception {
  int64 id = 1;
  int32 code = 2;
  map<string,string> property = 3;
}
message EventResponse {
  string listenerName = 1;
  string eventName = 2;
  repeated BinaryValue params = 3;
}
message BinaryValue {
  bool isNull = 1;
  repeated bytes array = 2;
  bytes one = 3;
}
message String {
  string value = 1;
}
message StringArray {
  repeated string value = 1;
}
message Integer {
  int32 value = 1;
}
message IntegerArray {
  repeated int32 value = 1;
}
message Long {
  int64 value = 1;
}
message LongArray {
  repeated int64 value = 1;
}
message Double {
  double value = 1;
}
message DoubleArray {
  repeated double value = 1;
}
message Float {
  float value = 1;
}
message FloatArray {
  repeated float value = 1;
}
message Boolean {
  bool value = 1;
}
message BooleanArray {
  repeated bool value = 1;
}
message Byte {
  bytes value = 1;
}
message ByteArray {
  bytes value = 1;
}
message Enum {
  int32 value = 1;
}
